crates/next-custom-transforms/tests/errors/react-server-components/server-graph/dynamic-ssr-false/output.js
import dynamic from 'next/dynamic';
export default function() {
    return dynamic(()=>import('client-only'), {
        ssr: false
    });
}
